2007-03-19  Kevin Cozens  <kcozens@cvs.gnome.org>

	* examples/burst
	* examples/centerguide
	* examples/colorhtml
	* examples/dataurl
	* examples/ditherize
	* examples/dots
	* examples/dust
	* examples/example-fu
	* examples/example-net
	* examples/example-oo
	* examples/fade-alpha
	* examples/feedback
	* examples/frame_filter
	* examples/frame_reshuffle
	* examples/goldenmean
	* examples/gouge
	* examples/guidegrid
	* examples/guides_to_selection
	* examples/innerbevel
	* examples/layerfuncs
	* examples/map_to_gradient
	* examples/perlotine
	* examples/pixelmap
	* examples/prep4gif
	* examples/randomart1
	* examples/randomblends
	* examples/repdup
	* examples/scratches
	* examples/sethspin
	* examples/stampify
	* examples/stamps
	* examples/translogo
	* examples/triangle
	* examples/warp-sharp
	* examples/webify
	* examples/windify
	* examples/xachlego
	* examples/xachshadow
	* examples/xachvision: s/Distrubuted/Distributed/

2005-10-11  Seth Burgess <sjburges@gimp.org>
	* examples/scratches: fixed problem if layersize!=imagesize 
	that Carol pointed out.

2005-10-11  Seth Burgess <sjburges@gimp.org>
	* examples/billboard: run from an image
	* Makefile.PL: install
	* acconfig.h
	* aclocal.m4
	* config.pl.in
	* configure
	* confgiure.ac
	* configure.frag: removed unused files
	* Made 2.2pre1 release

2005-10-11  Carol Spears <carol@gimp.org>
	* examples/centerguide
	* examples/guide_remove: undo_group_start and undo_group_end added

2005-09-19  Seth Burgess <sjburges@gimp.org>
	* Module/*
	* Gimp/PDL.pm
	* examples/image_list
	* examples/font_table: removed
	* TODO: update accordingly

2005-09-19  Seth Burgess <sjburges@gimp.org>
	* Makefile.PL: adjust installed scripts
	* TODO: updated
	* examples/testall: script to exercise other scripts (not
	  yet complete, but good enough for below)
	* examples/blowinout
	* examples/bricks  
	* examples/dust  
	* examples/example-net  
	* examples/glowing_steel  
	* examples/goldenmean  
	* examples/guides_to_selection  